# matos

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: pyproject.toml
backend/matos/: __init__.py  cli.py  config.py  main.py
backend/matos/api/: __init__.py  deps.py  discos.py  items.py  media.py  songs.py  tree.py
backend/matos/index/: __init__.py  builder.py  queries.py  schema.sql
backend/matos/integrations/: __init__.py
backend/matos/models/: __init__.py  artist.py  common.py  disco.py  geo.py  index.py  item.py  song.py
backend/matos/storage/: __init__.py  base.py  local.py
backend/tests/: conftest.py  test_api_media.py  test_api_read.py  test_index_builder.py  test_models.py  test_smoke.py  test_storage.py
docker/: Caddyfile  Caddyfile.frontend  backend.Dockerfile  frontend.Dockerfile
documentation/: db-schema.dot  mkdocs.yml
documentation/docs/: index.md
documentation/docs/api/: index.md
documentation/docs/arquitectura/: base-de-datos.md  index.md  modelo-metadatos.md
documentation/docs/assets/: extra.css
documentation/docs/casos-de-uso/: index.md  ringorrango.md
documentation/docs/guias/: comandos.md  desarrollo.md
frontend/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
schemas/: ccaa.schema.json  disco.schema.json  disco_track.schema.json  huerfanas.schema.json  index.schema.json  item.schema.json  provincia.schema.json  pueblo.schema.json  song.schema.json
scripts/: backup.sh  lock.sh  release.sh  restore.sh
